# openfx-zokzir

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
zokzircolor/: zokzirnegative.cpp  zokzirsaturation.cpp
zokzircolor/zokzirsaturation/: CMakeLists.txt
zokzirdistort/: zokzirdroste.cpp
zokzirdistort/zokzirdroste/: CMakeLists.txt  zokzirdroste.cpp
